- 
    Bug 
- 
    Resolution: Fixed
- 
    P1: Critical 
- 
    5.12.3
- 
    None
- 
    MSVC2017/64
- 
        
- 
        e4cd15e388f675a80a9c257655a580b1b53c240a
Steps to reproduce: Rebuild example with CONFIG += console:
tdatavis3d\examples\datavisualization\qmlspectrogram>debug\qmlspectrogram.exe
Attempting to create QWindow-based QOffscreenSurface outside the gui thread. Expect failures.
QWaitCondition: Destroyed while threads are still waiting
- relates to
- 
                    QTBUG-69627 QQmlApplicationEngine with Scatter3D hangs on closing -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-75256 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 259982,5 | Fix hanging at application exit | 5.13 | qt/qtdatavis3d | Status: MERGED | +2 | 0 |