Fix hanging at application exit

Task-number: QTBUG-75256
Task-number: QTBUG-69627
Change-Id: If4221c8fcf783daf4bf6a38dbf1b9633a20eafb0
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>