src/datavisualization/engine/scatter3drenderer_p.h
@@ -120,6 +120,7 @@ public Q_SLOTS:
     void updateSelectedItem(int index, QScatter3DSeries *series);
 
 protected:
+    void contextCleanup();
     virtual void initializeOpenGL();
     virtual void fixCameraTarget(QVector3D &target);
     virtual void getVisibleItemBounds(QVector3D &minBounds, QVector3D &maxBounds);
